SERVER-14674 Shard dies during chunk migration if running repairDatabase and Compact